k8s/discourse/discourse.yml
apiVersion: v1
kind: Service
metadata:
  name: discourse
  labels:
    app: discourse
spec:
  selector:
    app: discourse
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: discourse
  labels:
    app: discourse
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: discourse
    spec:
      nodeSelector:
        kind: cpu
      containers:
      - name: discourse
        image: registry.default.svc.cluster.local/local_discourse/web:v1.9.0.beta11
        imagePullPolicy: Always
        command:
        - bash
        - -c
        - |
          [...]
        resources:
          requests:
            cpu: 300m
            memory: 3Gi
        ports:
        - name: http
          containerPort: 80
        # two discourse containers absolutely must not run on the same host
        - name: no-colocate
          containerPort: 6969
          hostPort: 6969
        readinessProbe:
          httpGet:
            path: /
            port: http
            httpHeaders:
            - name: Host
              value: forum.kazamatsuri.org
          timeoutSeconds: 10
          periodSeconds: 10
          successThreshold: 4
        volumeMounts:
        - name: nginx-log
          mountPath: /var/log/nginx
        - name: discourse-log
          mountPath: /shared/log
        - name: discourse-uploads
          mountPath: /shared/uploads
        # - name: discourse-backups
        #   mountPath: /shared/backups
      # - name: filebeat
      #   image: docker.elastic.co/beats/filebeat:5.5.0
      #   imagePullPolicy: Always
      #   command:
      #   - sh
      #   - -exc
      #   - |
      #     cat <<EOF > /tmp/filebeat.yml
      #     filebeat.prospectors:
      #     - input_type: log
      #       multiline.pattern: '^([[:space:]]|\z)'
      #       multiline.negate: false
      #       multiline.match: after
      #       paths:
      #       - /shared/log/rails/unicorn.stderr.log
      #       - /shared/log/rails/unicorn.stdout.log
      #     output.logstash:
      #       hosts: ["logstash.default.svc.cluster.local:5044"]
      #     EOF
      #     filebeat -e -v -c /tmp/filebeat.yml
      #   volumeMounts:
      #   - name: nginx-log
      #     mountPath: /var/log/nginx
      #   - name: discourse-log
      #     mountPath: /shared/log
      volumes:
      - name: nginx-log
        emptyDir: {}
      - name: discourse-log
        emptyDir: {}
      - name: discourse-uploads
        cephfs:
          monitors:
          - rook-ceph-mon0.kube-system.svc.cluster.local:6790
          - rook-ceph-mon1.kube-system.svc.cluster.local:6790
          - rook-ceph-mon5.kube-system.svc.cluster.local:6790
          user: admin
          secretRef:
            name: rook-admin
      # - name: discourse-uploads
      #   flexVolume:
      #     driver: kazokuco/svfs
      #     fsType: svfs
      #     options:
      #       container: discourse-uploads
      # - name: discourse-backups
      #   flexVolume:
      #     driver: kazokuco/svfs
      #     fsType: svfs
      #     options:
      #       container: discourse-backups
